Add source-supported patient follow-up draft actions
Co-authored-by: Vectant Agent <agent@vectant.dev>