@@ -3,12 +3,18 @@ package com.example.hospital.ai;
 import com.example.hospital.api.ApiException;
 import com.example.hospital.security.Actor;
 import com.example.hospital.security.DepartmentContext;
+import com.example.hospital.repository.PatientRepository;
 import com.example.hospital.service.AuditService;
 import com.example.hospital.service.HospitalService;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.time.LocalDate;
+import java.time.LocalTime;
+import java.time.Instant;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
@@ -21,15 +27,32 @@ public class AiPatientDraftService {
   private final AiModelClient model;
   private final AiSourceService sources;
   private final HospitalService hospital;
+  private final PatientRepository patients;
+  private final JdbcTemplate jdbc;
   private final Actor actor;
   private final AuditService audit;
   private final ObjectMapper json;
   private final String mode;
+  private final Map<String, DraftState> drafts = new ConcurrentHashMap<>();
+
+  private record FollowUpCandidate(String title, LocalDate dueDate, LocalTime dueTime,
+      double confidence, String sourceName, String excerpt, String reportedLocation,
+      int characterStart, int characterEnd) {}
+  private record FollowUpRecord(FollowUpCandidate primary, List<FollowUpCandidate> conflicts,
+      String status) {}
+  private record DraftState(long userId, long departmentId, String sourceId, Long patientId, Instant expiresAt,
+      Map<String, Object> response, Map<String, FollowUpRecord> actions) {}
+  public record ReviewedFollowUpAction(String actionId, String title, LocalDate dueDate,
+      LocalTime dueTime, String decision) {}
+  public record ValidatedFollowUpAction(String actionId, String sourceId, String title, LocalDate dueDate,
+      LocalTime dueTime, String decision, String sourceName, String sourceLocation,
+      String sourceExcerpt, double confidence, boolean edited) {}
 
   public AiPatientDraftService(AiModelClient model, AiSourceService sources, HospitalService hospital,
-      Actor actor, AuditService audit, ObjectMapper json,
+      PatientRepository patients, JdbcTemplate jdbc, Actor actor, AuditService audit, ObjectMapper json,
       @Value("${app.ai.mode}") String mode) {
     this.model = model; this.sources = sources; this.hospital = hospital;
+    this.patients = patients; this.jdbc = jdbc;
     this.actor = actor; this.audit = audit; this.json = json; this.mode = mode;
   }
 
@@ -60,7 +83,7 @@ public class AiPatientDraftService {
         List.of(), List.of(), "UTC");
     AiModelClient.ToolCall call;
     try {
-      call = model.complete("Extract only patientIdentifier, firstName, lastName, dateOfBirth, address and phoneNumber explicitly present in the submitted document. Do not infer, normalize beyond simple formatting, or return diagnoses, medications, orders, or treatment. For each field return an array of candidates with value, confidence (0 to 1), excerpt copied verbatim from the source, and optional location such as page, sheet, or row. Return an empty array for missing fields. Include all conflicting candidates. Put the JSON object in draft_json with exactly these field keys.", context);
+      call = model.complete("Extract only patientIdentifier, firstName, lastName, dateOfBirth, address and phoneNumber explicitly present in the submitted document, plus explicit follow-up actions such as requested appointments or calls. Do not infer missing values, due dates, due times, diagnoses, medications, orders, or treatment. For each patient field return an array of candidates with value, confidence (0 to 1), excerpt copied verbatim from the source, and optional location such as page, sheet, or row. Return an empty array for missing fields. For followUpActions return an array of explicit actions, each with title, dueDate (YYYY-MM-DD only when explicit, otherwise null), dueTime (HH:mm only when explicit, otherwise null), confidence, excerpt copied verbatim, optional location, and conflicts (an array of alternative explicitly stated title/date/time values with their own confidence and excerpt). Do not create an action to fill a missing value. Put the JSON object in draft_json with exactly these top-level patient field keys plus followUpActions.", context);
     } catch (RuntimeException failure) {
       throw new ApiException(503, "PATIENT_DRAFT_AI_UNAVAILABLE", "The configured AI provider could not prepare a draft. The source remains available until it expires or is removed.");
     }
@@ -126,11 +149,237 @@ public class AiPatientDraftService {
     }
 
     var matches = matchCandidates(candidateValues);
+    String draftId = UUID.randomUUID().toString();
+    var actionMap = parseFollowUpActions(root.path("followUpActions"), source);
+    var actionRecords = new LinkedHashMap<String, FollowUpRecord>();
+    var fullActions = new ArrayList<Map<String, Object>>();
+    for (var entry : actionMap.entrySet()) {
+      String actionId = UUID.randomUUID().toString();
+      FollowUpRecord action = entry.getValue();
+      actionRecords.put(actionId, action);
+      fullActions.add(followUpActionView(actionId, action));
+    }
     audit.log("PATIENT_DRAFT_EXTRACTED", "PatientDraft", null, "AI",
         Map.of("sourceId", source.id(), "fieldCount", FIELDS.size(), "matchCount", matches.size()));
-    return Map.of("source", Map.of("id", source.id(), "name", source.name(), "expiresAt", source.expiresAt()),
-        "fields", fieldViews, "matchCandidates", matches, "reviewRequired", true,
-        "saved", false, "supportedFields", FIELDS);
+    var response = new LinkedHashMap<String, Object>();
+    response.put("draftId", draftId);
+    response.put("source", Map.of("id", source.id(), "name", source.name(), "expiresAt", source.expiresAt()));
+    response.put("fields", fieldViews); response.put("matchCandidates", matches);
+    response.put("followUpActions", fullActions); response.put("reviewRequired", true);
+    response.put("saved", false); response.put("supportedFields", FIELDS);
+    var state = new DraftState(actor.user().getId(), DepartmentContext.id(), source.id(), null, source.expiresAt(),
+        Collections.unmodifiableMap(response), Collections.unmodifiableMap(actionRecords));
+    purgeDrafts(); drafts.put(draftId, state);
+    return response;
+  }
+
+  public Map<String, Object> getDraft(String draftId) {
+    actor.requirePatientImport();
+    var draft = ownedDraft(draftId);
+    sources.sourceForExtraction(draft.sourceId());
+    var response = new LinkedHashMap<String, Object>(draft.response());
+    response.put("patientId", draft.patientId());
+    return response;
+  }
+
+  public Map<String, Object> bindPatient(String draftId, Long patientId) {
+    actor.requirePatientImport();
+    if (patientId == null || patientId < 1) throw invalidReview();
+    var draft = ownedDraft(draftId);
+    sources.sourceForExtraction(draft.sourceId());
+    patients.findByDepartmentIdAndId(DepartmentContext.id(), patientId)
+        .orElseThrow(ApiException::missing);
+    if (actor.doctor()) {
+      try {
+        hospital.accessible(patientId);
+      } catch (AccessDeniedException denied) {
+        boolean createdByActor = Boolean.TRUE.equals(jdbc.queryForObject(
+            "select count(*) > 0 from audit_events where department_id=? and user_id=? and event_type='PATIENT_CREATED' and entity_type='Patient' and entity_id=?",
+            Boolean.class, DepartmentContext.id(), actor.user().getId(), patientId));
+        if (!createdByActor) throw ApiException.missing();
+      }
+    }
+    if (draft.patientId() != null && !draft.patientId().equals(patientId))
+      throw ApiException.conflict("PATIENT_DRAFT_BOUND", "This document draft is already attached to another patient. Prepare a new draft to change its patient.");
+    var bound = new DraftState(draft.userId(), draft.departmentId(), draft.sourceId(), patientId,
+        draft.expiresAt(), draft.response(), draft.actions());
+    drafts.put(draftId, bound);
+    return getDraft(draftId);
+  }
+
+  public List<ValidatedFollowUpAction> validateReviewedFollowUpActions(String draftId,
+      Long patientId,
+      List<ReviewedFollowUpAction> selections) {
+    actor.requirePatientImport();
+    var draft = ownedDraft(draftId);
+    sources.sourceForExtraction(draft.sourceId());
+    if (draft.patientId() == null || patientId == null || !draft.patientId().equals(patientId))
+      throw new ApiException(409, "PATIENT_DRAFT_PATIENT_MISMATCH", "Bind this document draft to the selected patient before launching follow-up tasks.");
+    if (selections == null || selections.size() > 50) throw invalidReview();
+    var seen = new HashSet<String>();
+    var result = new ArrayList<ValidatedFollowUpAction>();
+    for (var selection : selections) {
+      if (selection == null || selection.actionId() == null || !seen.add(selection.actionId())) throw invalidReview();
+      var action = draft.actions().get(selection.actionId());
+      if (action == null) throw invalidReview();
+      String title = selection.title() == null ? "" : selection.title().strip();
+      String decision = selection.decision();
+      boolean edited;
+      FollowUpCandidate cited = action.primary();
+      if ("REJECTED".equals(decision)) {
+        edited = false;
+        if (title.isEmpty()) title = action.primary().title();
+      } else if ("ACCEPTED".equals(decision)) {
+        edited = false;
+        if (title.isBlank() || title.length() > 200 || selection.dueTime() != null && selection.dueDate() == null)
+          throw invalidReview();
+        final String selectedTitle = title;
+        cited = allCandidates(action).stream().filter(candidate ->
+            candidate.title().equals(selectedTitle) && Objects.equals(candidate.dueDate(), selection.dueDate())
+                && Objects.equals(candidate.dueTime(), selection.dueTime())).findFirst().orElse(null);
+        if (cited == null) throw invalidReview();
+      } else if ("EDITED".equals(decision)) {
+        edited = true;
+        if (title.isBlank() || title.length() > 200 || selection.dueTime() != null && selection.dueDate() == null)
+          throw invalidReview();
+      } else throw invalidReview();
+      result.add(new ValidatedFollowUpAction(selection.actionId(), draft.sourceId(), title, selection.dueDate(),
+          selection.dueTime(), decision, cited.sourceName(),
+          "characters " + cited.characterStart() + "-" + cited.characterEnd(),
+          cited.excerpt(), cited.confidence(), edited));
+    }
+    if (seen.size() != draft.actions().size()) throw invalidReview();
+    return List.copyOf(result);
+  }
+
+  private DraftState ownedDraft(String draftId) {
+    purgeDrafts();
+    var draft = drafts.get(draftId);
+    if (draft == null || draft.userId() != actor.user().getId()
+        || draft.departmentId() != DepartmentContext.id())
+      throw new ApiException(404, "PATIENT_DRAFT_UNAVAILABLE", "This patient draft expired or is unavailable in this workspace.");
+    return draft;
+  }
+
+  private void purgeDrafts() {
+    drafts.values().removeIf(draft -> !draft.expiresAt().isAfter(java.time.Instant.now()));
+  }
+
+  private static ApiException invalidReview() {
+    return new ApiException(400, "INVALID_FOLLOW_UP_REVIEW", "Review each selected follow-up action and use a valid source draft.");
+  }
+
+  private Map<String, Object> candidateSourceView(FollowUpCandidate candidate) {
+    return Map.of("name", candidate.sourceName(),
+        "location", "characters " + candidate.characterStart() + "-" + candidate.characterEnd(),
+        "reportedLocation", candidate.reportedLocation(), "excerpt", candidate.excerpt(),
+        "characterStart", candidate.characterStart(), "characterEnd", candidate.characterEnd());
+  }
+
+  private Map<String, Object> candidateView(FollowUpCandidate candidate) {
+    var result = new LinkedHashMap<String, Object>();
+    result.put("title", candidate.title()); result.put("dueDate", candidate.dueDate());
+    result.put("dueTime", candidate.dueTime()); result.put("confidence", candidate.confidence());
+    result.put("source", candidateSourceView(candidate));
+    return result;
+  }
+
+  private Map<String, Object> followUpActionView(String actionId, FollowUpRecord action) {
+    var result = new LinkedHashMap<String, Object>();
+    result.put("actionId", actionId); result.put("title", action.primary().title());
+    result.put("dueDate", action.primary().dueDate()); result.put("dueTime", action.primary().dueTime());
+    result.put("confidence", action.primary().confidence()); result.put("status", action.status());
+    boolean conflict = "CONFLICT".equals(action.status());
+    boolean uncertain = "UNCERTAIN".equals(action.status());
+    var fieldStatuses = new LinkedHashMap<String, String>();
+    fieldStatuses.put("title", conflict ? "CONFLICT" : uncertain ? "UNCERTAIN" : "SUGGESTED");
+    fieldStatuses.put("dueDate", conflict && action.conflicts().stream().anyMatch(c ->
+        !Objects.equals(c.dueDate(), action.primary().dueDate())) ? "CONFLICT"
+        : action.primary().dueDate() == null ? "MISSING" : uncertain ? "UNCERTAIN" : "SUGGESTED");
+    fieldStatuses.put("dueTime", conflict && action.conflicts().stream().anyMatch(c ->
+        !Objects.equals(c.dueTime(), action.primary().dueTime())) ? "CONFLICT"
+        : action.primary().dueTime() == null ? "MISSING" : uncertain ? "UNCERTAIN" : "SUGGESTED");
+    result.put("fieldStatuses", fieldStatuses);
+    result.put("unresolvedFields", fieldStatuses.entrySet().stream()
+        .filter(e -> !"SUGGESTED".equals(e.getValue())).map(Map.Entry::getKey).toList());
+    result.put("sources", List.of(candidateSourceView(action.primary())));
+    result.put("conflicts", action.conflicts().stream().map(this::candidateView).toList());
+    result.put("requiresResolution", !"SUGGESTED".equals(action.status()));
+    return result;
+  }
+
+  private static List<FollowUpCandidate> allCandidates(FollowUpRecord action) {
+    var result = new ArrayList<FollowUpCandidate>(); result.add(action.primary());
+    result.addAll(action.conflicts()); return result;
+  }
+
+  private Map<String, FollowUpRecord> parseFollowUpActions(JsonNode actions, AiSourceService.Source source) {
+    if (actions.isMissingNode() || actions.isNull()) return Map.of();
+    if (!actions.isArray() || actions.size() > 50) throw invalidDraft();
+    var result = new LinkedHashMap<String, FollowUpRecord>();
+    for (JsonNode action : actions) {
+      if (!action.isObject() || !action.path("title").isTextual()
+          || !action.path("excerpt").isTextual() || !action.path("confidence").isNumber()) throw invalidDraft();
+      requireKeys(action, Set.of("title", "dueDate", "dueTime", "confidence", "excerpt", "location", "conflicts"));
+      String title = action.path("title").asText().strip();
+      String excerpt = action.path("excerpt").asText().strip();
+      double confidence = action.path("confidence").asDouble();
+      if (title.isBlank() || title.length() > 200 || !validExcerpt(source, excerpt)
+          || confidence < 0 || confidence > 1) throw invalidDraft();
+      FollowUpCandidate primary = candidate(action, source, title, excerpt, confidence);
+      JsonNode conflicts = action.path("conflicts");
+      if (!conflicts.isMissingNode() && !conflicts.isArray()) throw invalidDraft();
+      if (!conflicts.isMissingNode() && conflicts.size() > 10) throw invalidDraft();
+      var conflictCandidates = new ArrayList<FollowUpCandidate>();
+      for (JsonNode conflict : conflicts) {
+        if (!conflict.isObject() || !conflict.path("title").isTextual()
+            || !conflict.path("excerpt").isTextual() || !conflict.path("confidence").isNumber()) throw invalidDraft();
+        requireKeys(conflict, Set.of("title", "dueDate", "dueTime", "confidence", "excerpt", "location"));
+        String otherTitle = conflict.path("title").asText().strip();
+        String otherExcerpt = conflict.path("excerpt").asText().strip();
+        double otherConfidence = conflict.path("confidence").asDouble();
+        if (otherTitle.isBlank() || otherTitle.length() > 200 || !validExcerpt(source, otherExcerpt)
+            || otherConfidence < 0 || otherConfidence > 1) throw invalidDraft();
+        conflictCandidates.add(candidate(conflict, source, otherTitle, otherExcerpt, otherConfidence));
+      }
+      boolean contradictory = conflictCandidates.stream().anyMatch(candidate ->
+          !candidate.title().equals(primary.title())
+              || !Objects.equals(candidate.dueDate(), primary.dueDate())
+              || !Objects.equals(candidate.dueTime(), primary.dueTime()));
+      String status = contradictory ? "CONFLICT"
+          : confidence < 0.65 ? "UNCERTAIN" : "SUGGESTED";
+      result.put(UUID.randomUUID().toString(), new FollowUpRecord(primary, List.copyOf(conflictCandidates), status));
+    }
+    return Collections.unmodifiableMap(result);
+  }
+
+  private FollowUpCandidate candidate(JsonNode data, AiSourceService.Source source,
+      String title, String excerpt, double confidence) {
+    LocalDate date = optionalDate(data.path("dueDate"));
+    LocalTime time = optionalTime(data.path("dueTime"));
+    if (time != null && date == null) throw invalidDraft();
+    String reportedLocation = data.path("location").isTextual() ? data.path("location").asText().strip() : "";
+    if (reportedLocation.length() > 100) throw invalidDraft();
+    int start = source.text().indexOf(excerpt);
+    return new FollowUpCandidate(title, date, time, confidence, source.name(), excerpt,
+        reportedLocation, start, start + excerpt.length());
+  }
+
+  private static LocalDate optionalDate(JsonNode value) {
+    if (value.isMissingNode() || value.isNull() || value.asText().isBlank()) return null;
+    try { return LocalDate.parse(value.asText()); } catch (RuntimeException e) { throw invalidDraft(); }
+  }
+  private static LocalTime optionalTime(JsonNode value) {
+    if (value.isMissingNode() || value.isNull() || value.asText().isBlank()) return null;
+    try { return LocalTime.parse(value.asText()); } catch (RuntimeException e) { throw invalidDraft(); }
+  }
+  private static boolean validExcerpt(AiSourceService.Source source, String excerpt) {
+    return excerpt != null && !excerpt.isBlank() && excerpt.length() <= 500 && source.text().contains(excerpt);
+  }
+
+  private static void requireKeys(JsonNode value, Set<String> allowed) {
+    var names = value.fieldNames();
+    while (names.hasNext()) if (!allowed.contains(names.next())) throw invalidDraft();
   }
 
   private List<Map<String, Object>> matchCandidates(Map<String, String> fields) {
@@ -153,7 +402,8 @@ public class AiPatientDraftService {
   }
 
   private boolean keysAreAllowed(JsonNode root) {
-    var names = root.fieldNames(); while (names.hasNext()) if (!FIELDS.contains(names.next())) return false;
+    var allowed = new HashSet<>(FIELDS); allowed.add("followUpActions");
+    var names = root.fieldNames(); while (names.hasNext()) if (!allowed.contains(names.next())) return false;
     return true;
   }
   private static int maxLength(String field) { return switch (field) {
